fix vertical alignment

--- a/stylesheets/drunk-index-calculator.css
+++ b/stylesheets/drunk-index-calculator.css
@@ -5,6 +5,7 @@
 
 body {
     align-items: center;
+    left: 50px;
 }
   
 #all-container {
